..F....... [ZBXNEXT-5249] fixed contrast themes and code style

--- a/frontends/php/assets/styles/blue-theme.css
+++ b/frontends/php/assets/styles/blue-theme.css
@@ -2370,8 +2370,6 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
   background-color: #fff;
   border: 1px solid #dfe4e7;
   padding-bottom: 8px; }
-  .dashbrd-grid-widget-container.dashbrd-grid-widget-container-without-padding {
-    padding-bottom: 0; }
 
 .dashbrd-grid-widget-head {
   position: relative;
@@ -3116,6 +3114,9 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
 
 .middle {
   vertical-align: middle; }
+
+.no-padding {
+  padding: 0; }
 
 .graph-selection {
   position: absolute;
@@ -4921,28 +4922,26 @@ table.preprocessing-test-results .rel-container {
   width: 100%;
   height: 100%;
   table-layout: fixed; }
-  .host-avail-widget tr td {
-    vertical-align: middle;
-    padding: 0 10px; }
-    .host-avail-widget tr td span {
-      font-size: 16px; }
+  .host-avail-widget td {
+    padding: 0 10px;
+    vertical-align: middle; }
+  .host-avail-widget .host-avail-count {
+    font-size: 16px; }
   .host-avail-widget.host-avail-layout-horizontal {
     min-width: 305px; }
-    .host-avail-widget.host-avail-layout-horizontal tr td {
+    .host-avail-widget.host-avail-layout-horizontal td {
       text-align: center; }
-      .host-avail-widget.host-avail-layout-horizontal tr td span {
-        display: block; }
-  .host-avail-widget.host-avail-layout-vertical tr td span {
+    .host-avail-widget.host-avail-layout-horizontal .host-avail-count {
+      display: block; }
+  .host-avail-widget.host-avail-layout-vertical td {
+    padding-top: 3px; }
+  .host-avail-widget.host-avail-layout-vertical .host-avail-count {
     margin-right: 5px; }
-  .host-avail-widget .host-avail-col-true {
-    color: black;
+  .host-avail-widget .host-avail-true {
     background: #86cc89; }
-  .host-avail-widget .host-avail-col-false {
-    color: black;
+  .host-avail-widget .host-avail-false {
     background: #e45959; }
-  .host-avail-widget .host-avail-col-unknown {
-    color: black;
+  .host-avail-widget .host-avail-unknown {
     background: #97aab3; }
-  .host-avail-widget .host-avail-col-total {
-    color: #1f2c33;
+  .host-avail-widget .host-avail-total {
     background: transparent; }
